objects/HS_Activity__c.object
<CustomObject>
    <fields>
        <fullName>KT_Primary_volunteering_preference_2__c</fullName>
        <label>KT - Primary volunteering preference 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Primary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Primary_volunteering_preference_3__c</fullName>
        <label>KT - Primary volunteering preference 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Primary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Secondary_Borough__c</fullName>
        <label>KT - Secondary Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Camden, or The City</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Secondary_volunteering_preference_1__c</fullName>
        <label>KT - Secondary volunteering preference 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Secondary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Secondary_volunteering_preference_2__c</fullName>
        <label>KT - Secondary volunteering preference 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Secondary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Secondary_volunteering_preference_3__c</fullName>
        <label>KT - Secondary volunteering preference 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Secondary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kick_Off_Link__c</fullName>
        <formula>if( Application_Batch__c =&quot;KT&quot;,&quot;link 1&quot;, if (Application_Batch__c =&quot;West&quot;,&quot;Link 2&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kick Off Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff_Attendance__c</fullName>
        <inlineHelpText>If 1, YP has attended a kickoff</inlineHelpText>
        <label>Kickoff Attendance</label>
        <summaryFilterItems>
            <field>HS_YP_Attendance__c.Did_YP_attend_the_event__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>HS_YP_Attendance__c.Event_Type_Selection__c</field>
            <operation>equals</operation>
            <value>Kickoffs</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_YP_Attendance__c.HS_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_modified_time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last modified time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Learning_Difficulty_Info__c</fullName>
        <inlineHelpText>If yes, please provide more information about your learning difficulty.</inlineHelpText>
        <label>Learning Difficulty Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_of_Welcome_day__c</fullName>
        <formula>IF(ISPICKVAL( Invite_to_which_welcome_day__c , &quot;1&quot;) ,  Volunteering_Placement__r.Location_of_Welcome_day_1a__c  &amp;  Volunteering_Placement__r.Location_of_Welcome_day_1b__c ,
IF(ISPICKVAL( Invite_to_which_welcome_day__c , &quot;2&quot;) , Volunteering_Placement__r.Location_of_Welcome_day_2a__c  &amp;  Volunteering_Placement__r.Location_of_Welcome_day_2b__c,
IF(ISPICKVAL( Invite_to_which_welcome_day__c , &quot;3&quot;) , Volunteering_Placement__r.Location_of_Welcome_day_3a__c  &amp;  Volunteering_Placement__r.Location_of_Welcome_day_3b__c,
IF(ISPICKVAL( Invite_to_which_welcome_day__c , &quot;4&quot;) , Volunteering_Placement__r.Location_of_Welcome_day_4a__c  &amp;  Volunteering_Placement__r.Location_of_Welcome_day_4b__c,&quot;No Welcome Day Chosen&quot;))))</formula>
        <label>Location of Welcome day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logisitical_adjustments__c</fullName>
        <description>Adjustments required to be made for each YP</description>
        <label>Logisitical adjustments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resource support</fullName>
                </value>
                <value>
                    <fullName>Learning support</fullName>
                </value>
                <value>
                    <fullName>Transport support</fullName>
                </value>
                <value>
                    <fullName>Mobility needs</fullName>
                </value>
                <value>
                    <fullName>Sensory needs</fullName>
                </value>
                <value>
                    <fullName>Medical needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <formula>Volunteering_Placement__r.Main_Contact__c</formula>
        <label>Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_contact_email__c</fullName>
        <formula>Volunteering_Placement__r.Main_contact_email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_contact_number__c</fullName>
        <formula>Volunteering_Placement__r.Main_contact_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main contact number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Volunteer_Placement_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Volunteer Placement trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions_Info__c</fullName>
        <inlineHelpText>If yes, please provide more information about your medical conditions</inlineHelpText>
        <label>Medical Conditions Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_conditions_info__c</fullName>
        <inlineHelpText>If yes, please provide more information about your mental health conditions.</inlineHelpText>
        <label>Mental Health conditions info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCS_Season__c</fullName>
        <formula>Young_Person__r.NCS_Application_Primary_Season__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Wave_Region__c</fullName>
        <formula>Young_Person__r.HeadStart_YP_Contact__r.Assigned_Wave__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will show the Wave Region the YP was on if they did the NCS Programme with the Challenge</inlineHelpText>
        <label>NCS Wave Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Wave_Started__c</fullName>
        <formula>Young_Person__r.Wave_started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Wave Started</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Wave_number__c</fullName>
        <formula>Young_Person__r.HeadStart_YP_Contact__r.Assigned_Wave__r.Wave_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Wave number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Zone__c</fullName>
        <formula>Young_Person__r.HeadStart_YP_Contact__r.Assigned_Wave__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_YP__c</fullName>
        <formula>Young_Person__r.FirstName &amp; &quot; &quot;  &amp;  Young_Person__r.LastName</formula>
        <label>Name of YP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_education_establishment__c</fullName>
        <label>Name of education establishment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Workflow is used to update this field with contents from Update Notes field</description>
        <inlineHelpText>This field is locked.  Use the Update notes field to enter notes.</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times we have tried to contact the YP unsuccessfully</inlineHelpText>
        <label>Number of Call Attempts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OJE_Date_and_time__c</fullName>
        <inlineHelpText>OJE Date and time</inlineHelpText>
        <label>OJE Date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OJE_Location__c</fullName>
        <inlineHelpText>OJE Location</inlineHelpText>
        <label>OJE Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OJE_Outcome__c</fullName>
        <label>OJE Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed - job secure</fullName>
                </value>
                <value>
                    <fullName>Passed - on hold</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_information_from_YP__c</fullName>
        <label>Other information from YP</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_HS_Cluster__c</fullName>
        <label>Override HS Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCHIC</fullName>
                </value>
                <value>
                    <fullName>BHEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>